# koji-smoky-dingo

./: .flake8  .gitignore  .gitmodules  .travis.yml  Makefile  README.md  index.html  koji-smoky-dingo.spec  kojismokydingo.spec  no-koji.patch  objects.inv  searchindex.js  setup-meta.py  setup.cfg  setup.py
.github/workflows/: announce.yml  bandit.yml  build_docs.yml  build_rpms.yml  build_wheel.yml  on_nightly.yml  on_push.yml  on_release.yml  release.yml  rpms.yml  run_announce.yml  run_bandit.yml  run_tests.yml  tox.yml  wheel.yml
_modules/: index.html
_modules/kojismokydingo/: index.html
_sources/: commands.rst.txt  faq.rst.txt  kojismokydingo.rst.txt  overview.rst.txt  release_notes.rst.txt
_sources/commands/: cginfo.rst.txt  check-repo.rst.txt  open.rst.txt  perminfo.rst.txt  userinfo.rst.txt
_sources/kojismokydingo/: dnf.rst.txt  rpm.rst.txt
_sources/release_notes/: v2.0.0.rst.txt
_static/: documentation_options.js
commands/: index.html
commands/affected-targets/: index.html
commands/block-env-var/: index.html
commands/block-rpm-macro/: index.html
commands/bulk-move-builds/: index.html
commands/bulk-tag-builds/: index.html
commands/bulk-untag-builds/: index.html
commands/cginfo/: index.html
commands/check-hosts/: index.html
commands/check-repo/: index.html
commands/client-config/: index.html
commands/filter-builds/: index.html
commands/filter-tags/: index.html
commands/latest-archives/: index.html
commands/list-btypes/: index.html
commands/list-build-archives/: index.html
commands/list-cgs/: index.html
commands/list-component-builds/: index.html
commands/list-env-vars/: index.html
commands/list-rpm-macros/: index.html
commands/list-tag-extras/: index.html
commands/open/: index.html
commands/perminfo/: index.html
commands/pull-container/: index.html
commands/remove-env-var/: index.html
commands/remove-rpm-macro/: index.html
commands/renum-tag-inheritance/: index.html
commands/repoquery/: index.html
commands/set-env-var/: index.html
commands/set-rpm-macro/: index.html
commands/swap-tag-inheritance/: index.html
commands/unset-env-var/: index.html
commands/unset-rpm-macro/: index.html
commands/userinfo/: index.html
docs/: Makefile  commands.rst  conf.py  faq.rst  index.rst  kojismokydingo.rst  overview.rst  pluginconfig.rst  release_notes.rst  siftylang.rst  standalone.rst
docs/commands/: affected-targets.rst  block-env-var.rst  block-rpm-macro.rst  bulk-move-builds.rst  bulk-tag-builds.rst  bulk-untag-builds.rst  cginfo.rst  check-hosts.rst  check-repo.rst  client-config.rst  filter-builds.rst  filter-tags.rst  latest-archives.rst  list-btypes.rst  list-build-archives.rst  list-cgs.rst  list-component-builds.rst  list-env-vars.rst  list-rpm-macros.rst  list-tag-extras.rst  open.rst  perminfo.rst  pull-container.rst  remove-env-var.rst  remove-rpm-macro.rst  renum-tag-inheritance.rst  repoquery.rst  set-env-var.rst  set-rpm-macro.rst  swap-tag-inheritance.rst  unset-env-var.rst  unset-rpm-macro.rst  userinfo.rst
docs/kojismokydingo/: archives.rst  builds.rst  cli.rst  clients.rst  common.rst  hosts.rst  sift.rst  standalone.rst  tags.rst  types.rst  users.rst
docs/release_notes/: v0.9.0.rst  v0.9.1.rst  v0.9.2.rst  v0.9.3.rst  v0.9.4.rst  v0.9.5.rst  v0.9.6.rst  v0.9.7.rst  v1.0.0.rst  v1.1.0.rst  v2.0.0.rst  v2.1.0.rst  v2.1.1.rst  v2.2.0.rst  v2.3.0.rst
docs/standalone/: ksd-filter-builds.rst  ksd-filter-tags.rst
examples/command/: README.md  setup.py
examples/script/: README.md  whoami.py
examples/sieve/: setup.py
examples/sift/: README.md  comparison.sift
examples/standalone/: README.md  whoami.py
faq/: index.html
genindex/: index.html
koji_cli_plugins/: kojismokydingo.py  kojismokydingometa.py  mass_tag.py
kojismokydingo/: __init__.py  __init__.pyi  _magic.py  affected_targets.py  archives.py  archives.pyi  builds.py  builds.pyi  check_hosts.py  checkhosts.py  cli.py  client_config.py  clients.py  clients.pyi  common.py  common.pyi  conf.py  dnf.py  hosts.py  hosts.pyi  identify_imported.py  identify_obsolete.py  index.html  list_archives.py  list_artifacts.py  mass_tag.py  perminfo.py  plugins.py  renum_tag.py  rpm.py  swap_inheritance.py  tags.py  tags.pyi  types.py  types.pyi  userinfo.py  users.py  users.pyi
kojismokydingo/archives/: index.html
kojismokydingo/builds/: index.html
kojismokydingo/cli/: __init__.py  __init__.pyi  archives.py  archives.pyi  builds.py  builds.pyi  clients.py  clients.pyi  filters.py  hosts.py  hosts.pyi  index.html  sift.py  sift.pyi  tags.py  tags.pyi  users.py  users.pyi
kojismokydingo/clients/: index.html
kojismokydingo/common/: index.html
kojismokydingo/dnf/: index.html
kojismokydingo/hosts/: index.html
kojismokydingo/rpm/: index.html
kojismokydingo/rpms/: index.html
kojismokydingo/sift/: __init__.py  __init__.pyi  builds.py  builds.pyi  common.py  common.pyi  index.html  parse.py  parse.pyi  tags.py  tags.pyi
kojismokydingo/standalone/: __init__.py  __init__.pyi  builds.py  builds.pyi  index.html  tags.py  tags.pyi
kojismokydingo/tags/: index.html
mypy/: README.md  proxytype.py
overview/: index.html
pluginconfig/: index.html
py-modindex/: index.html
release_notes/: index.html
search/: index.html
siftylang/: index.html
standalone/: index.html
tests/: __init__.py  archives.py  builds.py  common.py  conf.py  hosts.py  packaging.sh  rpm.py  tags.py
todo/: identify_br.py  userinfo.py
tools/: Containerfile.almalinux10  Containerfile.centos6  Containerfile.centos7  Containerfile.centos8  Containerfile.centosstream8  Containerfile.centosstream9  Containerfile.fedora28  Containerfile.fedora30  Containerfile.fedora32  Containerfile.fedora34  Containerfile.fedora35  Containerfile.fedora36  Containerfile.fedora37  Containerfile.fedora38  Containerfile.fedora39  Containerfile.fedora40  Containerfile.fedora41  Containerfile.rockylinux8  Containerfile.rockylinux9  README.md  autocomplete.py  centos-6.10-vault.repo  common.sh  launch-build.sh  launch-test.sh  missing_deps.patch  rpmbuild.sh  version.sh
(+94 files in other folders)
