# This file defines the general configuration for the kojismokydingo
# wheel, and the tools tox, nose, flake8, coverage, and sphinx


[metadata]
name = kojismokydingo
version = 2.2.0
description =  A collection of Koji client plugins and utils

author = Christopher O'Brien
author_email = obriencj@gmail.com

copyright_years = 2020-2023

license = GNU General Public License v3 (GPLv3)
license_files =
  LICENSE

long_description = file: README.md
long_description_content_type = text/markdown

home_page = https://github.com/obriencj/koji-smoky-dingo

platform = any

project_urls =
  Source = https://github.com/obriencj/koji-smoky-dingo
  Bug Reports = https://github.com/obriencj/koji-smoky-dingo/issues
  Documentation = https://obriencj.github.io/koji-smoky-dingo
  Discussions = https://obriencj.github.io/koji-smoky-dingo/discussions

classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Software Development :: Build Tools
  Topic :: Utilities


[options]
packages =
  koji_cli_plugins
  kojismokydingo
  kojismokydingo.cli
  kojismokydingo.sift
  kojismokydingo.standalone

zip_safe = False

install_requires =
  appdirs
  koji
  typing_extensions ; python_version < '3.10'

tests_require =
  docutils


[options.entry_points]
koji_smoky_dingo =
  affected-targets = kojismokydingo.cli.tags:AffectedTargets
  block-env-var = kojismokydingo.cli.tags:BlockEnvVar
  block-rpm-macro = kojismokydingo.cli.tags:BlockRPMMacro
  bulk-move-builds = kojismokydingo.cli.builds:BulkMoveBuilds
  bulk-tag-builds = kojismokydingo.cli.builds:BulkTagBuilds
  bulk-untag-builds = kojismokydingo.cli.builds:BulkUntagBuilds
  check-hosts = kojismokydingo.cli.hosts:CheckHosts
  check-repo = kojismokydingo.cli.tags:CheckRepo
  client-config = kojismokydingo.cli.clients:ClientConfig
  cginfo = kojismokydingo.cli.users:ShowCGInfo
  filter-builds = kojismokydingo.cli.builds:FilterBuilds
  filter-tags = kojismokydingo.cli.tags:FilterTags
  latest-archives = kojismokydingo.cli.archives:LatestArchives
  list-btypes = kojismokydingo.cli.builds:ListBTypes
  list-build-archives = kojismokydingo.cli.archives:ListBuildArchives
  list-cgs = kojismokydingo.cli.builds:ListCGs
  list-component-builds = kojismokydingo.cli.builds:ListComponents
  list-env-vars = kojismokydingo.cli.tags:ListEnvVars
  list-rpm-macros = kojismokydingo.cli.tags:ListRPMMacros
  list-tag-extras = kojismokydingo.cli.tags:ListTagExtras
  open = kojismokydingo.cli.clients:ClientOpen
  perminfo = kojismokydingo.cli.users:ShowPermissionInfo
  pull-container = kojismokydingo.cli.builds:PullContainer
  remove-env-var = kojismokydingo.cli.tags:RemoveEnvVar
  remove-rpm-macro = kojismokydingo.cli.tags:RemoveRPMMacro
  renum-tag-inheritance = kojismokydingo.cli.tags:RenumTagInheritance
  repoquery = kojismokydingo.cli.tags:RepoQuery
  set-env-var = kojismokydingo.cli.tags:SetEnvVar
  set-rpm-macro = kojismokydingo.cli.tags:SetRPMMacro
  swap-tag-inheritance = kojismokydingo.cli.tags:SwapTagInheritance
  userinfo = kojismokydingo.cli.users:ShowUserInfo

console_scripts =
  ksd-filter-builds = kojismokydingo.standalone.builds:ksd_filter_builds
  ksd-filter-tags = kojismokydingo.standalone.tags:ksd_filter_tags


[options.package_data]
kojismokydingo =
  py.typed


[aliases]
# nose acts enough like the original test command, but without the
# extremely obnoxious deprecation warning. And why are they
# deprecating the test command? So someone can remove approximately 40
# lines of code from setuptools, despite the test command being the
# most convenient and available way to get started with unit testing.

test = nosetests


[tox:tox]
envlist = flake8,mypy,bandit,twine,py{36,37,38,39,310,311},coverage
skip_missing_interpreters = true


[testenv]
setenv =
  COVERAGE_FILE = .coverage.{envname}

commands =
  python -B -m coverage run -m nose

sitepackages = false

deps =
  coverage
  nose-py3

download = true


[testenv:py36]

# this prevents systems with newer pythons from exploding. For some
# reason virtualenv tries to run the venv's pip with its own python
# version, not the matching one. Due to insanity with the recent
# python leadership, there are breaking API changes in 3.11 and
# onwards which make the vendored 3.6 site packages fail.
download = false


[testenv:bandit]

basepython = python3.9

commands =
  python -B -m bandit --ini setup.cfg \
    -qr kojismokydingo/ koji_cli_plugins/

deps =
  bandit


[testenv:bandit-sarif]

basepython = python3.9

commands =
  python -B -m bandit --ini setup.cfg \
    -f sarif -o bandit.sarif \
    -qr kojismokydingo/ koji_cli_plugins/
  python -B -m sarif summary bandit.sarif

deps =
  bandit
  bandit-sarif-formatter
  sarif-tools


[testenv:flake8]

basepython = python3.9

commands =
  python -B -m flake8 kojismokydingo/ koji_cli_plugins/

deps =
  flake8

skip_install = True


[testenv:twine]

basepython = python3.9

commands =
  python -B -m build -n .
  python -B -m twine check dist/*.whl

deps =
  build
  twine

skip_install = True


[testenv:mypy]

basepython = python3.9

commands =
  python -B -m mypy kojismokydingo

deps =
  mypy
  types-pkg_resources


[testenv:quicktest]

basepython = python3.9

commands =
  python -B -I -m nose

deps =
  nose-py3

download = True


[testenv:coverage]
# this is just here to combine the coverage output

setenv =
  COVERAGE_FILE = .coverage

basepython = python

commands =
  python -B -m coverage combine
  python -B -m coverage report
  python -B -m coverage html

deps =
  coverage

skip_install = True


[testenv:sphinx]

basepython = python3.9

# somewhere, some idiot is proud of the removal of the build_sphinx
# setuptools integration.
commands =
  python -B -m sphinx.cmd.build -b dirhtml \
    docs build/sphinx/dirhtml

  python -B -m sphinx.cmd.build -b html \
    docs build/sphinx/html

deps =
  sphinx


[testenv:build]

basepython = python3.9

commands =
  python -B -m build -n .

deps =
  build


[nosetests]

all-modules = 1
no-byte-compile = 1
verbosity = 2


[coverage:run]

source =
  koji_cli_plugins
  kojismokydingo

omit =
  *.pyi


[coverage:report]

exclude_lines =
  \.\.\.
  pass
  pragma: no cover
  @abstract


[bandit]
# B101 complains about asserts

skips = B101


[flake8]
# E303 complains about more than one blank lines between methods in a class
# E731 assigning a lambda to a variable
# E741 ambiguous variable name
# F401 ambiguous variable name
# F812 list comprehension redefines variable (I reuse tmp names)
# W504 line break after binary operator

ignore = E303,E731,E741,F401,F812,W504

filename =
  *.py
  *.pyi

exclude =
  __pycache__
  .*
  build
  dist
  docs
  gh-pages
  htmlcov
  setup.py
  tests
  todo
  tools


[mypy]
no_site_packages = False
ignore_missing_imports = True
strict_optional = False
mypy_path = stubs/


[gh-actions]
python =
  3.7: py37
  3.8: py38
  3.9: py39
  3.10: py310
  3.11: py311


#
# The end.
